# LocalData

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fetch-llama.ps1  fetch-llama.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  llm.rs  main.rs  server.rs
src/components/: AiPanel.tsx  AuditPanel.tsx  AutomationsPanel.tsx  CalendarView.tsx  FieldEditor.tsx  FormView.tsx  GalleryView.tsx  GridView.tsx  ImportModal.tsx  KanbanView.tsx  LocalePicker.tsx  RecordModal.tsx  ReportModal.tsx  ServerPanel.tsx  StartScreen.tsx  Toolbar.tsx  TopBar.tsx  ViewSidebar.tsx  cells.tsx
src/lib/: ai.ts  automations.ts  backend.ts  clipboard.ts  exampleExtension.ts  extensions.ts  formula.ts  i18n.ts  importer.ts  remote.ts  theme.ts  types.ts
src/lib/__tests__/: clipboard.test.ts  formula.test.ts  importer.test.ts
src/state/: store.ts
